tried to fix bold + ysm logo alignment

--- a/our-work.css
+++ b/our-work.css
@@ -138,3 +138,19 @@
     text-decoration: none;
     color: #292929;
 }
+
+.impact {
+    display: flex;
+}
+
+.impact-text{
+    width: 50%;
+    padding-left: 40px;
+    margin-top: 15px;
+}
+
+.ysm{
+    width: 50%;
+    text-align: center;
+    margin-top: 0;
+}
